--- a/charts/index.yaml
+++ b/charts/index.yaml
@@ -2,7 +2,7 @@ apiVersion: v1
 entries:
   library-chart:
   - apiVersion: v2
-    created: "2024-10-31T17:32:11.210773+01:00"
+    created: "2024-10-31T19:54:06.171905+01:00"
     digest: 16c2e39587ba95d194ec204a3e534411bd6e7eaf5aa204b15f9db5687518d85e
     name: library-chart
     type: library
@@ -10,28 +10,33 @@ entries:
     - https://mbtraore.github.io/ollama2/library-chart-1.5.30.tgz
     version: 1.5.30
   ollama:
-  - apiVersion: v2
+  - annotations:
+      artifacthub.io/category: ai-machine-learning
+      artifacthub.io/changes: |
+        - kind: changed
+          description: upgrade app version to 0.3.14
+    apiVersion: v2
     appVersion: 0.3.14
-    created: "2024-10-31T17:32:11.213009+01:00"
-    dependencies:
-    - name: library-chart
-      repository: https://inseefrlab.github.io/helm-charts-interactive-services
-      version: 1.5.30
-    description: Get up and running with large language models locally
-    digest: 896d8814f3a256f0a1469cc7c4c7d20599d0c0ea944d746b4922b41d1b5fd302
+    created: "2024-10-31T19:54:06.173529+01:00"
+    description: Get up and running with large language models locally.
+    digest: 6f345baa25fd444ed099565cd388d980ff11c36a32b6ac30d6b8fcfaa455a634
     home: https://ollama.ai/
     icon: https://ollama.ai/public/ollama.png
     keywords:
     - ai
     - llm
-    - llam
+    - llama
     - mistral
+    kubeVersion: ^1.16.0-0
+    maintainers:
+    - email: contact@otwld.com
+      name: OTWLD
     name: ollama
     sources:
     - https://github.com/ollama/ollama
     - https://github.com/otwld/ollama-helm
     type: application
     urls:
-    - https://mbtraore.github.io/ollama2/ollama-0.64.0.tgz
-    version: 0.64.0
-generated: "2024-10-31T17:32:11.209929+01:00"
+    - https://mbtraore.github.io/ollama2/ollama-0.63.0.tgz
+    version: 0.63.0
+generated: "2024-10-31T19:54:06.171239+01:00"
